[gd_scene load_steps=17 format=2]

[ext_resource path="res://font/NotoSansCJKjp-DemiLight.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://art/button-bg.svg" type="Texture" id=3]
[ext_resource path="res://ProfessorJob.tscn" type="PackedScene" id=4]
[ext_resource path="res://AssistantJob.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 356, 92 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.431373, 0.611765, 0.603922, 0.643137 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=6]
default_font = SubResource( 5 )
Button/colors/font_color = Color( 0.133333, 0.133333, 0.133333, 1 )
Button/fonts/font = SubResource( 7 )
Button/styles/normal = SubResource( 4 )
Panel/styles/panel = SubResource( 8 )

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="DynamicFont" id=9]
size = 44
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxTexture" id=10]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 356, 92 )
margin_left = 20.0

[sub_resource type="DynamicFont" id=12]
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=11]
default_font = SubResource( 12 )
RichTextLabel/colors/default_color = Color( 0.713726, 0.14902, 0.14902, 1 )
RichTextLabel/fonts/normal_font = SubResource( 9 )
RichTextLabel/styles/normal = SubResource( 10 )

[node name="Main" type="Spatial"]
script = ExtResource( 2 )

[node name="OpeningPanel" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="OpeningPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -66.5
margin_top = -33.0
margin_right = 66.5
margin_bottom = 33.0
theme = SubResource( 2 )
text = "START"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton2" type="Button" parent="OpeningPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 110.0
margin_top = -33.0
margin_right = 243.0
margin_bottom = 33.0
theme = SubResource( 2 )
text = "PAUSE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Console" type="Panel" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -105.0
theme = SubResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="Console"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -260.0
margin_top = -33.0
margin_right = -40.0
margin_bottom = 33.0
theme = SubResource( 2 )
text = "次に進む"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton2" type="Button" parent="Console"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 110.0
margin_top = -33.0
margin_right = 243.0
margin_bottom = 33.0
theme = SubResource( 2 )
text = "PAUSE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProfessorLife" parent="." instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1 )

[node name="EventHappened" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -99.0
margin_top = -115.0
margin_right = 464.0
margin_bottom = -32.0
rect_min_size = Vector2( 200, 60 )
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 11 )
text = "イベント通知ラベル"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EventDisplayTimer" type="Timer" parent="EventHappened"]
wait_time = 4.0
one_shot = true

[node name="AssistantLife" parent="." instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.1, -0.5 )

[connection signal="pressed" from="OpeningPanel/StartButton" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="OpeningPanel/StartButton2" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Console/StartButton" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Console/StartButton2" to="." method="_on_Button_pressed"]
[connection signal="event_happened" from="ProfessorLife" to="." method="_on_event_happened"]
[connection signal="timeout" from="EventHappened/EventDisplayTimer" to="." method="_on_EventDisplayTimer_timeout"]
[connection signal="event_happened" from="AssistantLife" to="." method="_on_event_happened"]
